--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Virtual environment
 venv/
+env/
+.venv/
+
+# Streamlit secrets
+.streamlit/secrets.toml
+.streamlit/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Environment files
+.env
+*.env
+
+# OS files
+.DS_Store
